added bootstrap tabs

--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,149 @@
 html, body {
-    background-color: #000000;
-    color:#ffffff
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #b3b3b3;
+  font-family: "Ubunto Mono", monospace;
+}
+html a, body a {
+  color: #181818;
+}
+html a:hover, body a:hover {
+  color: #181818;
+  text-decoration: underline;
 }
 
-a {
-    text-decoration: none;
-    color:#ffffff
+#landing-page {
+  height: 100vh;
+  width: 100vw;
+  max-width: 800px;
+  margin: auto;
+  padding: 100px;
 }
 
-a:hover {
-    font-weight: bold;
+nav {
+  background-color: #404040;
+  border: none;
+  color: #ffffff;
+}
+nav a {
+  color: #ffffff;
+}
+nav h1 {
+  margin: 1%;
 }
 
-#title {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height: 30vh;
-    font-size: xx-large;
+.nav.nav-tabs {
+  background-color: #404040;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  border: none;
+}
+.nav.nav-tabs a {
+  color: #ffffff;
 }
 
-#home-links {
-    display: grid;
-    grid-template-columns: 33vw 33vw auto;
-    width: 80vw;
+.nav-item.active {
+  background-color: #b3b3b3;
+  border: 1px solid;
+  border-top-color: black;
+  border-bottom: none;
+  border-radius: 12px 12px 0 0;
+}
+.nav-item.active a {
+  color: #181818;
+}
+
+#active-link {
+  font-weight: bold;
+}
+
+.article {
+  text-align: left;
+  margin: 1% 5%;
+}
+
+.content {
+  margin: 20px 0;
+}
+
+.btn, .answer_btn {
+  width: fit-content;
+  min-width: 5em;
+  border: 1px solid black;
+  grid-column: 1/span 2;
+}
+
+#intervalButtons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+input {
+  width: fit-content;
+  justify-self: center;
+  margin: 4px;
+}
+
+.form-select {
+  justify-self: center;
+  width: fit-content;
+  margin: 10px 4px;
+}
+
+.answer, .staff {
+  display: flex;
+  justify-content: center;
+}
+
+.staff {
+  border-radius: 12px;
+  background-color: white;
+  max-width: 600px;
+  margin: auto;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10%;
+}
+
+#shark {
+  width: 100vw;
+  height: 100vw;
+  padding: 10px;
+}
+
+@media (max-width: 600px) {
+  #staff {
+    width: 400px;
     margin: auto;
-    padding: 1em;
+  }
+
+  .content {
+    display: grid;
+    grid-template-columns: auto;
     justify-content: center;
-    font-size: xx-large;
-    border: 1px solid white;
-    border-radius: 20px;
+    margin: 20px 0;
+  }
+
+  form {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 10px;
+    text-align: right;
+  }
+
+  .form-select {
+    width: 100%;
+  }
 }
+
+/*# sourceMappingURL=styles.css.map */
