--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,6 @@
     <!-- unicode -->
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <!--styles-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -33,28 +31,28 @@
             <h1>Brian Gaudino</h1>
             <ul class="nav justify-content-center">
                 <li class="nav-link">
-                    <a id="active-link" class="nav-link" href="music.html">Musician</a>
+                    <a class="nav-link" href="music.html">Musician</a>
                 </li>
                 <li class="nav-link">
                     <a class="nav-link" href="education.html">Educator</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" aria-current="page" href="scale.html">Developer</a>
+                    <a class="nav-link" aria-current="page" href="development.html">Developer</a>
                 </li>
             </ul>
         </nav>
         <div class="flex">
             <ul class="nav nav-tabs">
-                <li class="nav-item active"><a class="nav-link" href="music.html">Classical</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Jazz</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Major 3rds Tuning</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Electronic</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Scores</a></li>
+                <li class="nav-item active"><a class="nav-link" href="scale.html">Scale Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="interval.html">Interval Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="chord.html">Chord Calculator</a></li>
+                <li class="nav-item"><a class="nav-link" href="note_id.html">Note Identification</a></li>
+                <li class="nav-item"><a class="nav-link" href="eartraining.html">Interval Ear Training</a></li>
+                <li class="nav-item"><a class="nav-link" href="scratch.html">Guitar Shark</a></li>
             </ul>
         </div>
         <div class="content">
-            <h1>TODO: for now enjoy this video!</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/oOCKb6AXN40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         </div>
     </body>
 </html>
