--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="education.html">Educator</a>
                 </li>
                 <li class="nav-link">
-                    <a class="nav-link" aria-current="page" href="development.html">Developer</a>
+                    <a class="nav-link" aria-current="page" href="scale.html">Developer</a>
                 </li>
             </ul>
         </nav>
